--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ h1,h2,h3,h4,h5,h6,label,span {
   font-family: 'Fira Sans', sans-serif;
 }
 
-body, html, .App,.Home, #root, .auth-wrapper, .board-wrapper {
+body, html, .App,.Home, #root, .auth-wrapper, .board-wrapper, .menu-wrapper {
   width: 100%;
   height: 100%;
 }
@@ -56,6 +56,29 @@ body, html, .App,.Home, #root, .auth-wrapper, .board-wrapper {
   border-radius: 15px;
   transition: all .3s;
 }
+
+.menu-wrapper{
+  display: flex;
+  position: absolute;
+  left: 10%;
+  top: 10%;
+  transform: translate(-10%,-10%);
+  justify-content: center;
+  flex-direction: column;
+  text-align: left;
+}
+
+.menu{
+  width: 80%;
+  height: 80%;
+  margin: auto;
+  background: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 40px 55px 45px 55px;
+  border-radius: 15px;
+  transition: all .3s;
+}
+
 .auth-inner {
   width: 450px;
   margin: auto;
@@ -66,7 +89,7 @@ body, html, .App,.Home, #root, .auth-wrapper, .board-wrapper {
   transition: all .3s;
 }
 
-.auth-wrapper .board-wrapper .form-control:focus {
+.auth-wrapper .board-wrapper .menu-wrapper .form-control:focus {
   border-color: #167bff;
   box-shadow: none;
 }
@@ -79,6 +102,13 @@ body, html, .App,.Home, #root, .auth-wrapper, .board-wrapper {
 }
 
 .board-wrapper h3 {
+  text-align: center;
+  margin: 0;
+  line-height: 1;
+  padding-bottom: 20px;
+}
+
+.menu-wrapper h3 {
   text-align: center;
   margin: 0;
   line-height: 1;
