--- a/src/index.css
+++ b/src/index.css
@@ -38,21 +38,19 @@ body, html, .App,.Home, #root, .auth-wrapper, .board-wrapper, .menu-wrapper {
 .board-wrapper {
   display: flex;
   position: absolute;
-  left: 10%;
-  top: 10%;
-  transform: translate(-10%,-10%);
+  padding-top: 50px;
   justify-content: center;
   flex-direction: column;
   text-align: left;
 }
 
 .board{
-  width: 1800px;
-  height: 850px;
+  width: 98%;
+  height: 95%;
   margin: auto;
   background: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  padding: 40px 55px 45px 55px;
+  padding: 20px 20px 20px 20px;
   border-radius: 15px;
   transition: all .3s;
 }
@@ -79,7 +77,7 @@ body, html, .App,.Home, #root, .auth-wrapper, .board-wrapper, .menu-wrapper {
   transition: all .3s;
 }
 
-.status-bar-wrapper{
+.stats-bar-wrapper{
   display: flex;
   position: fixed;
   right: 100px;
@@ -91,11 +89,11 @@ body, html, .App,.Home, #root, .auth-wrapper, .board-wrapper, .menu-wrapper {
   transition: top 1s;
 }
 
-.status-bar-wrapper:hover{
+.stats-bar-wrapper:hover{
   top: 50px;
 }
 
-.status-bar{
+.stats-bar{
   width: 300px;
   height: 100%;
   margin: auto;
@@ -116,7 +114,7 @@ body, html, .App,.Home, #root, .auth-wrapper, .board-wrapper, .menu-wrapper {
   transition: all .3s;
 }
 
-.auth-wrapper .board-wrapper .menu-wrapper .status-bar-wrapper .form-control:focus {
+.auth-wrapper .board-wrapper .menu-wrapper .stats-bar-wrapper .form-control:focus {
   border-color: #167bff;
   box-shadow: none;
 }
@@ -142,7 +140,7 @@ body, html, .App,.Home, #root, .auth-wrapper, .board-wrapper, .menu-wrapper {
   padding-bottom: 20px;
 }
 
-.status-bar-wrapper h3 {
+.stats-bar-wrapper h3 {
   text-align: center;
   margin: 0;
   line-height: 1;
